--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,13 @@ spring.datasource.password=welcome4U@
 spring.jpa.show-sql=true
 
 
+#Live key
+razorpay.key.id=rzp_live_0KlxeEsfpZArko
+razorpay.key.secret=OXiHoD02B9nJQynqRT5g80Za
 
-razorpay.key.id=rzp_test_mHIc2FsOxWbBD7
-razorpay.key.secret=f8cWeZ5ImalzggaExivDZPT7
+
+
+#Test key
+#razorpay.key.id = rzp_test_mHIc2FsOxWbBD7
+#razorpay.key.secret = f8cWeZ5ImalzggaExivDZPT7
 
