Adding /  in url
Adding /  in url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=EvalvuePaymentServiceAPI
-server.port=8081
+server.port=8080
 
 
-
+spring.jpa.open-in-view = false
 
 spring.datasource.url=jdbc:sqlserver://93.127.185.167:1433;databaseName=testdb;encrypt=false;
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -10,7 +10,7 @@ spring.datasource.hikari.pool-name=primary
 spring.datasource.username=SA
 spring.datasource.password=welcome4U@
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 
 #Live key
