Payment History Api
Payment History Api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.hikari.pool-name=primary
 spring.datasource.username=SA
 spring.datasource.password=welcome4U@
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 
 
 #Live key
