changes in Payment receipt api
changes in Payment receipt api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.jpa.show-sql=true
 
 
 #Live key
-#razorpay.key.id=rzp_live_0KlxeEsfpZArko
-#razorpay.key.secret=OXiHoD02B9nJQynqRT5g80Za
+#razorpay.key.id = rzp_live_0KlxeEsfpZArko
+#razorpay.key.secret = OXiHoD02B9nJQynqRT5g80Za
 
 
 
