Live Mode Active change Key and port
Live Mode Active change Key and port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 spring.application.name=EvalvuePaymentServiceAPI
+
+#prod_db and Live key
 server.port=8080
+razorpay.key.id = rzp_live_0KlxeEsfpZArko
+razorpay.key.secret = OXiHoD02B9nJQynqRT5g80Za
+
+
+#Test_db and #Test key
+#server.port=8081
+#razorpay.key.id = rzp_test_mHIc2FsOxWbBD7
+#razorpay.key.secret = f8cWeZ5ImalzggaExivDZPT7
 
 
 spring.jpa.open-in-view = false
@@ -13,13 +23,9 @@ spring.datasource.password=welcome4U@
 spring.jpa.show-sql=true
 
 
-#Live key
-razorpay.key.id = rzp_live_0KlxeEsfpZArko
-razorpay.key.secret = OXiHoD02B9nJQynqRT5g80Za
 
 
 
-#Test key
-#razorpay.key.id = rzp_test_mHIc2FsOxWbBD7
-#razorpay.key.secret = f8cWeZ5ImalzggaExivDZPT7
+
+
 
