--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@ spring.application.name=EvalvuePaymentServiceAPI
 
 #prod_db and Live key
 #server.port=8080
-#razorpay.key.id = rzp_live_0KlxeEsfpZArko
-#razorpay.key.secret = OXiHoD02B9nJQynqRT5g80Za
+razorpay.key.id = rzp_live_0KlxeEsfpZArko
+razorpay.key.secret = OXiHoD02B9nJQynqRT5g80Za
 
 
 #Test_db and #Test key
 server.port=8081
-razorpay.key.id = rzp_test_mHIc2FsOxWbBD7
-razorpay.key.secret = f8cWeZ5ImalzggaExivDZPT7
+#razorpay.key.id = rzp_test_mHIc2FsOxWbBD7
+#razorpay.key.secret = f8cWeZ5ImalzggaExivDZPT7
 
 
 spring.jpa.open-in-view = false
