make services Unix Time and Enum mapping
make services Unix Time  and enum mapping

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,20 @@
 spring.application.name=EvalvuePaymentServiceAPI
 
 #prod_db and Live key
-server.port=8081
-razorpay.key.id = rzp_live_0KlxeEsfpZArko
-razorpay.key.secret = OXiHoD02B9nJQynqRT5g80Za
+ server.port=8081
+ razorpay.key.id = rzp_live_0KlxeEsfpZArko
+ razorpay.key.secret = OXiHoD02B9nJQynqRT5g80Za
 
 
 #Test_db and #Test key
-# server.port=8080
-# razorpay.key.id = rzp_test_mHIc2FsOxWbBD7
-# razorpay.key.secret = f8cWeZ5ImalzggaExivDZPT7
+#server.port=8080
+#razorpay.key.id = rzp_test_mHIc2FsOxWbBD7
+#razorpay.key.secret = f8cWeZ5ImalzggaExivDZPT7
 
 
 spring.jpa.open-in-view = false
 
-spring.datasource.url=jdbc:sqlserver://93.127.185.167:1433;databaseName=prod_db;encrypt=false;
+spring.datasource.url=jdbc:sqlserver://93.127.185.167:1433;databaseName=testdb;encrypt=false;
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.username=SA
 spring.datasource.password=welcome4U@
