--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.application.name=EvalvuePaymentServiceAPI
 
 spring.jpa.open-in-view = false
 
-spring.datasource.url=jdbc:sqlserver://93.127.185.167:1433;databaseName=testdb;encrypt=false;
+spring.datasource.url=jdbc:sqlserver://93.127.185.167:1433;databaseName=prod_db;encrypt=false;
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.username=SA
 spring.datasource.password=welcome4U@
